Version 0.7.1 (2 Jul 2004)

  * packaging changes:
    - added libgig.spec and libgig.pc package configurations for generating
      Redhat packages
    - header files included on installation.
    - autotools-generated files removed from CVS repository.
    - added support for generating Debian packages
    - version of shared library can be set in configure.in

Version 0.7.0 (3 May 2004)

  * general changes:
    - various big endian specific corrections
      (successfully tested now on PPC)
    - minor adjustments to avoid compile errors on some systems
      (using now pow() instead of powl() and --pedantic g++ compiler switch)
    - libtoolized the library
    - added man pages for the command line tools
      (gigextract, gigdump, dlsdump, rifftree)

  * src/gig.cpp, src/gig.h:
    - fixed bug in decompression algorithm which caused it not to detect
      the end of a stream
    - added method GetVelocityAttenuation() to class 'DimensionRegion' which
      takes the MIDI key velocity value as an argument and returns the
      appropriate volume factor (0.0 ... 1.0) for the sample to be played
      back, the velocity curve transformation functions used for this are
      only an approximation so far
    - fixed class attributes 'Sample::LoopStart', 'Sample::LoopEnd' and
      'Sample::LoopSize' which reflected wrong values
    - class attributes 'Sample::LoopStart' and 'Sample::LoopEnd' are now
      measured in sample points instead of byte offset
    - renamed misleading attribute name 'Sample::MIDIPitchFraction' to
      'Sample::FineTune'
    - added class attribute 'Sample::LoopSize'
    - added method GetInstrument(uint index) to class 'File'
    - added ReadAndLoop() method to class 'Sample' which is an extension to
      the normal Read() method to honor the sample's looping information
      while streaming from disk
    - changed interface for 'attenuation_ctrl_t', 'eg1_ctrl_t' and