@@ -1,3 +1,9 @@
+Version CVS HEAD (?)
+
+  * packaging changes:
+    - renamed 'libgig.pc.in' -> 'gig.pc.in' and renamed pkg-config lib name
+      'libgig' -> 'gig' as it's common practice to omit the 'lib' prefix
+
 Version 0.7.1 (2 Jul 2004)
 
   * packaging changes:
@@ -56,7 +62,6 @@ Version 0.7.0 (3 May 2004)
 
   * src/gigdump.cpp:
     - added printout of samples' looping informations
-
 
 Version 0.6.0 (3 Nov 2003)
 
